Bug 120317 - Form Controls no displayed in Design mode
Summary: Form Controls no displayed in Design mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: high major
Assignee: Regina Henschel
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
: 120356 120367 (view as bug list)
Depends on:
Blocks: Form-Controls
  Show dependency treegraph
 
Reported: 2018-10-04 15:24 UTC by Xisco Faulí
Modified: 2018-10-09 09:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-10-04 15:24:51 UTC
Steps to reproduce:
1. Open Writer
2. Check Form - Design Mode
3. Insert any form

-> It's not displayed. it will be displayed if design mode is unchecked.

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: 8ea0b0f4dc5eba2d0bafc2e42415ef1824ff604e
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 1 Xisco Faulí 2018-10-04 15:26:03 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=a9ec212c1b545d745285f0ab3119a80713b1d1f2

author	Regina Henschel <rb.henschel@t-online.de>	2018-09-14 18:56:23 +0200
committer	Regina Henschel <rb.henschel@t-online.de>	2018-09-21 11:32:34 +0200
commit a9ec212c1b545d745285f0ab3119a80713b1d1f2 (patch)
tree ca538b767f4f5ac69926e6da6c988a7175c21f6e
parent ed480e918b6c1d3566ebfdfae6687bc4a4a06c10 (diff)
tdf#67248 Use localized layer name only for display in UI

Bisected with: bibisect-linux64-6.2

Adding Cc: to Regina Henschel
Comment 2 Regina Henschel 2018-10-04 23:15:10 UTC
I have an idea for the reason. Writer uses a layer "Controls" with uppercase C but Draw/Impress use "controls" with lowercase c.

The problem is, that in Draw/Impress the feature "layer" is not only an internal tool, but is relevant for UI and file format. And "controls" with lowercase c has been written to file from the beginning.

Writer and Calc do not have any layers in ODF, but they use this tool only for internal purpose. Calc does it cleverer, and does not use a string but "constexpr SdrLayerID SC_LAYER_CONTROLS(3);" in global.hxx. I'll try to find a solution inside Writer.
Comment 3 Regina Henschel 2018-10-05 21:29:52 UTC
Proposed patch in https://gerrit.libreoffice.org/#/c/61447/
Comment 4 Thomas Lendo 2018-10-06 19:26:47 UTC
*** Bug 120356 has been marked as a duplicate of this bug. ***
Comment 5 Regina Henschel 2018-10-06 20:00:37 UTC
*** Bug 120367 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2018-10-07 13:12:24 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fbc2b2d93a091c9dba26139878dd3d0acc5f31e9

tdf#120317 Set control layer name if not default

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Regina Henschel 2018-10-09 09:19:15 UTC
Fixed in current master.
Comment 8 Xisco Faulí 2018-10-09 09:21:20 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 98cc91efd7862d39b3c33b85b744721bec935938
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Regina, thanks for the quick fix!