tdf#120317 Set control layer name if not default

In commit a9ec212c1b545d745285f0ab3119a80713b1d1f2 the internal
default name of the layer, which holds form controls, was changed to
controls, the same name as used in file format and UNO. Users of
the class SdrLayerAdmin have to set the control layer name
explicitly in case they want an own, different name.

Change-Id: Ia08a85a4d01a75ee2c5115da25b2a409204ccc01